Fixed issues with bootstrap modal and navbar and UI flickering with elevated time flow rate.

--- a/www/styles/style.css
+++ b/www/styles/style.css
@@ -24,6 +24,10 @@ body {
 	overflow-y: auto;
 }
 
+.navbar {
+	position:absolute;
+}
+
 .slider-container {
 	height:14px;
 	width:150px;
